fix: prevent wrapping button for long header

--- a/style.css
+++ b/style.css
@@ -1155,6 +1155,8 @@ ul {
   .page-header {
     align-items: baseline;
     flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 16px;
     margin: 0;
   }
 }
